@@ -9,19 +9,7 @@ from sqlalchemy.dialects.mssql.pyodbc import MSExecutionContext_pyodbc
 # The pyodbc execution context seems to work for mxODBC; reuse it here
 
 class MSExecutionContext_mxodbc(MSExecutionContext_pyodbc):
-    
-    def post_exec(self):
-        # snag rowcount before the cursor is closed
-        if not self.cursor.description:
-            self._rowcount = self.cursor.rowcount
-        super(MSExecutionContext_mxodbc, self).post_exec()
-        
-    @property
-    def rowcount(self):
-        if hasattr(self, '_rowcount'):
-            return self._rowcount
-        else:
-            return self.cursor.rowcount
+    pass
 
 class MSDialect_mxodbc(MxODBCConnector, MSDialect):
 
