@@ -54,22 +54,19 @@ class FoundRowsTest(TestBase, AssertsExecutionResults):
         department = employees_table.c.department
         r = employees_table.update(department=='C').execute(department='Z')
         print "expecting 3, dialect reports %s" % r.rowcount
-        if testing.db.dialect.supports_sane_rowcount:
-            assert r.rowcount == 3
+        assert r.rowcount == 3
 
     def test_update_rowcount2(self):
         # WHERE matches 3, 0 rows changed
         department = employees_table.c.department
         r = employees_table.update(department=='C').execute(department='C')
         print "expecting 3, dialect reports %s" % r.rowcount
-        if testing.db.dialect.supports_sane_rowcount:
-            assert r.rowcount == 3
+        assert r.rowcount == 3
 
     def test_delete_rowcount(self):
         # WHERE matches 3, 3 rows deleted
         department = employees_table.c.department
         r = employees_table.delete(department=='C').execute()
         print "expecting 3, dialect reports %s" % r.rowcount
-        if testing.db.dialect.supports_sane_rowcount:
-            assert r.rowcount == 3
+        assert r.rowcount == 3
 
